# lez-event-system

./: .gitignore  AGENT_HANDOFF.md  Cargo.toml  LICENSE  PHASE_9_10_COMPLETE.md  README.md  SUBMISSION.md  scratch.rs
.github/workflows/: ci.yml
demo/: index.html
docs/: architecture-decision.md  benchmarks.md  deployments.md  event-format.md  gap-analysis.md  research-notes.md  runtime-integration.md  submission-writeup.md
examples/indexer/: Cargo.toml
examples/indexer/src/: main.rs
examples/token-transfer/: Cargo.toml
examples/token-transfer/src/: main.rs
examples/withdraw/: Cargo.toml
examples/withdraw/src/: main.rs
integration-tests/: Cargo.toml
lez-event-decoder/: Cargo.toml
lez-event-decoder/src/: decoder.rs  formatter.rs  lib.rs
lez-events/: Cargo.toml
lez-events-runtime/: Cargo.toml
lez-events-runtime/src/: lib.rs  parser.rs  runtime.rs
lez-events/src/: emit.rs  error.rs  event.rs  lib.rs  macros.rs
lez-events/tests/: test_attribution.rs  test_encoding.rs  test_failure_path.rs  test_ordering.rs  test_size_limits.rs
me/: AGENT_HANDOFF.md
scripts/: demo.sh  narration-script.sh  run-integration-tests.sh
tests/: integration.rs
