[workspace]
resolver = "2"
members = [
    "lez-events",
    "lez-event-decoder",
    "examples/token-transfer",
    "examples/withdraw",
    "examples/indexer",
]

[workspace.dependencies]
# Pin to stable versions compatible with Rust 1.80.1
borsh = { version = "=1.5.0", features = ["derive"] }
serde = { version = "=1.0.197", default-features = false, features = ["derive"] }
serde_json = "=1.0.115"
thiserror = "=1.0.57"
bincode = "=1.3.3"
hex = "=0.4.3"
log = "=0.4.21"
anyhow = "=1.0.81"
clap = { version = "=4.4.17", features = ["derive"] }
tokio = { version = "=1.35.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "blocking"] }

[profile.release]
opt-level = 3
lto = true
