[package]
name = "lez-event-decoder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Decoder and CLI for LEZ events"

[[bin]]
name = "lez-event-cli"
path = "src/bin/lez-event-cli.rs"

[dependencies]
lez-events = { path = "../lez-events" }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
