[package]
name = "indexer-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lez-events = { path = "../../lez-events" }
lez-event-decoder = { path = "../../lez-event-decoder" }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
